<resources>
    <string name="app_name">BirdVue</string>
    <!--    registration page-->
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back">Go Back</string>
    <!--    login page-->
    <string name="login_heading">Login to your Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="no_account">Don\'t have an account? </string>
    <!-- Settings page -->
    <string name="profile_picture">Profile Picture</string>
    <string name="display_name">Display Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mapbox_access_token">pk.eyJ1IjoicGlybzQ3IiwiYSI6ImNsbmcyYnZyZTB5NnEycXA0ejMyMXljZGYifQ.5SnraH-d438N2ltYuC4VPQ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--   overview page add sighting  -->
    <string name="details">Details</string>
    <string name="my_location">My locate</string>
    <string name="bird_name">Bird Name</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="you_have_no_observations">You have no observations</string>
    <string name="there_are_no_posts_available">There are no posts available</string>
</resources>